--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "media-typer": "^0.3.0"
   }
 }
